# pod-watcher

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: pr.yml  publish.yml
kustomize/: kustomization.yaml  watcher.ClusterRole.yaml  watcher.ClusterRoleBinding.yaml  watcher.Deployment.yaml  watcher.ServiceAccount.yaml
src/: delete.rs  errors.rs  istio.rs  main.rs
src/cleanup/: delete.rs  istio.rs  mod.rs
test-data/: deployment.yaml  job.yaml  pod.yaml
